--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,82 @@
 	margin: 0;
     box-sizing: border-box;
 }
+
+body {
+	font-family: sans-serif;
+}
+
+
+
+main {
+	max-width: 40rem;
+	margin-inline: auto;
+	padding: 2rem;
+
+	h1 {
+		text-align: center;
+		margin-bottom: 2rem;
+	}
+}
+
+.card {
+	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+	padding: 2rem;
+	border-radius: 1rem;
+	position: relative;
+	overflow: hidden;
+	margin-bottom: 2rem;
+
+	&:hover {
+		cursor: pointer;
+	}
+
+	.question {
+		font-size: 1.5rem;
+		font-weight: 100;
+	}
+
+	.answer {
+		height: 0;
+		overflow: hidden;
+	}
+
+	.card-top {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: 1rem;
+
+	}
+
+	span {
+		font-size: 2rem;
+		transform: rotate(90deg);
+		font-weight: 100;
+		transition: transform .3s ease;
+	}
+
+	i {
+		color: cadetblue;
+		position: absolute;
+		top: 0;
+		left: -.15rem;
+		font-size: 4rem;
+		z-index: -1;
+		opacity: 0;
+	}
+
+	&.active i {
+		opacity: .4;
+	}
+
+	&.active .answer {
+		margin-top: 2rem;
+
+		height: 100%;
+	}
+
+	&.active span {
+		transform: rotate(270deg) !important;
+	}
+}
